--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/koa": "^2.13.0",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.28",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
@@ -26,6 +27,7 @@
   "dependencies": {
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
-    "koa-router": "^10.0.0"
+    "koa-router": "^10.0.0",
+    "mongoose": "^5.11.17"
   }
 }
