--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,6 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
+  "indent": [true, "spaces", 4],
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
