--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,9 @@
     ]
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictTemplates": true,
+    "fullTemplateTypeCheck":true,
+    "strictInjectionParameters": true
   }
 }
